--- a/BaiTapTuan4ListViewCustoms/app/src/main/res/layout/listview_layout.xml
+++ b/BaiTapTuan4ListViewCustoms/app/src/main/res/layout/listview_layout.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <ImageView
-            android:id="@+id/text23"
-            android:layout_width="131dp"
-            android:layout_height="112dp"
-            />
-        <TextView
-            android:layout_alignParentRight="true"
+<!--        <ImageView-->
+<!--            android:id="@+id/text23"-->
+<!--            android:layout_width="131dp"-->
+<!--            android:layout_height="112dp"-->
+<!--            />-->
+<!--        <TextView-->
+<!--            android:layout_alignParentRight="true"-->
 
-            android:layout_alignParentTop="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--    </RelativeLayout>-->
 </LinearLayout>
