--- a/BaiTapTuan7/app/src/main/res/layout/activity_acivitysignup.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/activity_acivitysignup.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:background="@drawable/nensignup"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -70,14 +71,21 @@
                     android:ems="10"
                     android:inputType="textPassword" />
                 <Button
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:backgroundTint="#8FB5E8FF"
+                    android:background="@drawable/radius_button"
                     android:id="@+id/btnsignup"
                     android:text="Đăng Kí"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:layout_below="@id/editTextTextPasswordagain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <Button
-                    android:background="#00FFFFFF"
+                    android:background="@drawable/radius_button"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:backgroundTint="#8FB5E8FF"
                     android:id="@+id/btnloginsignup"
                     android:text="Đăng Nhập"
                     android:layout_marginTop="20dp"
