--- a/BaiTapTuan7/app/src/main/res/layout/activity_list_view_music.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/activity_list_view_music.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".listViewMusic">
+    tools:context=".listViewMusic"
+    android:background="@drawable/nensignup">
     <ListView
         android:id="@+id/lvmusicview"
         android:layout_width="match_parent"
