--- a/BaiTapTuan7/app/src/main/res/layout/activity_main.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <LinearLayout
+        android:background="@drawable/nensignup"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -35,10 +36,16 @@
                 android:layout_marginLeft="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <EditText
-                    android:text="User"
+
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="33dp"
+                    android:layout_marginTop="11dp"
+                    android:text="Username" />
+
                 <EditText
                     android:layout_marginTop="20dp"
                     android:drawableLeft="@drawable/ic_user"
@@ -48,10 +55,16 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textEmailAddress" />
-                <EditText
-                    android:text="PassWord"
+
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/editTextTextEmailAddress"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="31dp"
+                    android:layout_marginTop="42dp"
+                    android:text="PassWord" />
+
                 <EditText
                     android:drawableLeft="@drawable/ic_pass"
                     android:layout_marginTop="50dp"
@@ -62,6 +75,7 @@
                     android:ems="10"
                     android:inputType="textPassword" />
                 <CheckBox
+                    android:textColor="#473939"
                     android:layout_marginTop="20dp"
                     android:id="@+id/checkBox"
                     android:layout_width="wrap_content"
@@ -76,6 +90,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <Button
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:backgroundTint="#8FB5E8FF"
+                    android:background="@drawable/radius_button"
                     android:id="@+id/btnlogin"
                     android:text="Login"
                     android:layout_marginTop="20dp"
@@ -98,6 +116,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <LinearLayout
+                        android:layout_marginRight="10dp"
+                        android:background="#1E79D3FB"
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent">
@@ -106,6 +126,7 @@
                             android:layout_width="45dp"
                             android:layout_height="49dp"/>
                         <Button
+                            android:background="#00CCCCCC"
                             android:text="FaceBook"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
@@ -113,14 +134,17 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:layout_marginLeft="10dp"
+                        android:background="#1E79D3FB"
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent">
                         <ImageView
-                            android:src="@drawable/twitter"
+                            android:src="@drawable/icont"
                             android:layout_width="35dp"
                             android:layout_height="49dp"/>
                         <Button
+                            android:background="#00CCCCCC"
                             android:text="Twitter"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
