--- a/BaiTapTuan7/app/src/main/res/layout/activity_acivitysignup.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/activity_acivitysignup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -15,12 +15,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="SignUp Form"
-                    android:textSize="55sp" />
+                <ImageView
+                    android:src="@drawable/logologinmain"
+                    android:layout_width="220dp"
+                    android:layout_height="120dp"
+                    android:layout_centerInParent="true"/>
             </RelativeLayout>
         </LinearLayout>
         <LinearLayout
@@ -73,7 +72,7 @@
                 <Button
                     android:textSize="16sp"
                     android:textColor="#000000"
-                    android:backgroundTint="#8FB5E8FF"
+                    android:backgroundTint="#8F9DE1FF"
                     android:background="@drawable/radius_button"
                     android:id="@+id/btnsignup"
                     android:text="Đăng Kí"
@@ -85,7 +84,7 @@
                     android:background="@drawable/radius_button"
                     android:textSize="16sp"
                     android:textColor="#000000"
-                    android:backgroundTint="#8FB5E8FF"
+                    android:backgroundTint="#8F9DE1FF"
                     android:id="@+id/btnloginsignup"
                     android:text="Đăng Nhập"
                     android:layout_marginTop="20dp"
@@ -101,5 +100,39 @@
 
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:background="#60FFFFFF"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="70dp"
+                android:layout_alignParentRight="true"
+                android:background="@null"
+                android:src="@drawable/nextpage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/outsignup"
+                android:layout_centerInParent="true"
+                android:background="@null"
+                android:src="@drawable/home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/btnbtnprevsignup"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="70dp"
+                android:background="@null"
+                android:src="@drawable/prevpage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+</FrameLayout>
