--- a/BaiTapTuan7/app/src/main/res/layout/activity_homemusic.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/activity_homemusic.xml
@@ -1,110 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".homemusic"
     android:background="@drawable/nenphatnhac">
-
-    <TextView
-        android:id="@+id/titleten"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
-        android:padding="7dp"
-        android:text="Tên bài hát"
-        android:textSize="24dp" />
-
-    <ImageButton
-        android:id="@+id/btnnext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginRight="35dp"
-        android:background="@null"
-        android:src="@drawable/next" />
-
-    <ImageButton
-        android:id="@+id/btnstop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="206dp"
-        android:layout_marginEnd="133dp"
-        android:layout_marginBottom="70dp"
-        android:background="@null"
-        android:src="@drawable/stopmusic" />
-
-    <ImageButton
-        android:id="@+id/btnplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="127dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginBottom="70dp"
-        android:background="@null"
-        android:src="@drawable/pausemusic" />
-
-    <ImageButton
-        android:id="@+id/btnprev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginBottom="70dp"
-        android:background="@null"
-        android:src="@drawable/rewindmusic" />
-
-    <SeekBar
-        android:id="@+id/sbtime"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="165dp" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/titleten"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="54dp"
+            android:padding="7dp"
+            android:text="Tên bài hát"
+            android:textSize="24dp" />
 
-    <TextView
-        android:id="@+id/timestart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="187dp"
-        android:text="00:00"
-        android:textColor="#EA3E3E" />
+        <ImageButton
+            android:id="@+id/btnnext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="100dp"
+            android:layout_marginRight="35dp"
+            android:background="@null"
+            android:src="@drawable/next" />
 
-    <TextView
-        android:id="@+id/timeend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="54dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="187dp"
-        android:text="00:00"
-        android:textColor="#EA3E3E" />
+        <ImageButton
+            android:id="@+id/btnstop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="90dp"
+            android:layout_marginBottom="100dp"
+            android:background="@null"
+            android:src="@drawable/stopmusic" />
 
-    <ImageView
-        android:id="@+id/imageViewroteta"
-        android:layout_width="292dp"
-        android:layout_height="244dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="198dp"
-        app:srcCompat="@drawable/cd" />
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/btnplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="90dp"
+            android:layout_marginBottom="100dp"
+            android:background="@null"
+            android:src="@drawable/pausemusic" />
+
+        <ImageButton
+            android:id="@+id/btnprev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="100dp"
+            android:background="@null"
+            android:src="@drawable/rewindmusic" />
+
+        <SeekBar
+            android:id="@+id/sbtime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="185dp" />
+
+        <TextView
+            android:id="@+id/timestart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="52dp"
+            android:layout_marginBottom="210dp"
+            android:text="00:00"
+            android:textColor="#EA3E3E" />
+
+        <TextView
+            android:id="@+id/timeend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="54dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="210dp"
+            android:text="00:00"
+            android:textColor="#EA3E3E" />
+
+        <ImageView
+            android:id="@+id/imageViewroteta"
+            android:layout_width="292dp"
+            android:layout_height="244dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="198dp"
+            app:srcCompat="@drawable/cd" />
+    </RelativeLayout>
+    <LinearLayout
+        android:background="#E2C9ECFD"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="70dp"
+                android:layout_alignParentRight="true"
+                android:background="@null"
+                android:src="@drawable/nextpage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/outhomemuisic"
+                android:layout_centerInParent="true"
+                android:background="@null"
+                android:src="@drawable/home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/prevlistmusic"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="70dp"
+                android:background="@null"
+                android:src="@drawable/prevpage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+</FrameLayout>
