--- a/BaiTapTuan7/app/src/main/res/layout/listmusic.xml
+++ b/BaiTapTuan7/app/src/main/res/layout/listmusic.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
@@ -25,5 +26,12 @@
         android:layout_below="@+id/tennhac"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <ImageView
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="30dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/tim"
+        android:layout_width="20dp"
+        android:layout_height="20dp"/>
 
 </RelativeLayout>
